# adas-feature-suite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/adas/: VehicleState.hpp
include/adas/diagnostics/: DTC.hpp  DTCEntry.hpp  DTCManager.hpp
include/adas/events/: EventBus.hpp  EventData.hpp  EventType.hpp  IEventSubscriber.hpp
include/adas/features/: AccFeature.hpp  AdasManager.hpp  AebFeature.hpp  DowFeature.hpp  IAdasFeature.hpp  LkaFeature.hpp
include/adas/signals/: Signal.hpp  SignalStatus.hpp  SignalValidator.hpp
simulator/: live_sim.cpp  main.cpp
src/diagnostics/: DTCManager.cpp
src/events/: EventBus.cpp
src/features/: AccFeature.cpp  AdasManager.cpp  AebFeature.cpp  DowFeature.cpp  LkaFeature.cpp
src/signals/: SignalValidator.cpp
tests/: test_acc.cpp  test_aeb.cpp  test_dow.cpp  test_eventbus.cpp  test_lka.cpp  test_signals.cpp
